Revert "chore(docker): update to java version 17 and affected Hadoop services"
This reverts commit 9d28560470799e9789eed29f49b28bb60418bae9.